tests/integration/errors/generic_ext_type_mismatch.rsg
// TEST: compile_error
// EXPECT-ERROR: type mismatch

struct Box<T> {
    value: T
}

ext<T> Box<T> {
    fn get(*b) -> T { b.value }
}

fn main() {
    b := Box<i32> { value = 42 }
    var result: str = b.get()
}
